<?xml version="1.0" encoding="utf-8"?>
<layout >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/diagonal_view_height"
            android:background="@drawable/wedged_shape_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v4.view.ViewPager
            android:id="@+id/steps_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v4.view.ViewPager>

        <TextView
            android:id="@+id/next_step_tv"
            style="@style/ControlButtonStyle"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/prev_step_tv"
            style="@style/ControlButtonStyle"
            android:text="@string/prev"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/no_of_steps_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_spacing"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/next_step_tv"
            app:layout_constraintEnd_toStartOf="@+id/next_step_tv"
            app:layout_constraintStart_toEndOf="@+id/next_step_tv"
            tools:text="1/10" />
    </android.support.constraint.ConstraintLayout>
</layout>