...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Intro Video" />

                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="@dimen/no_spacing"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_spacing"
                    android:layout_marginEnd="@dimen/medium_spacing"
                    android:layout_marginStart="@dimen/medium_spacing"
                    android:layout_marginTop="@dimen/large_spacing"
...
