...
                    android:layout_gravity="center"
                    android:text="@string/ingredients"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/steps_cv"
                style="@style/CardItemStyle"
                android:layout_marginTop="@dimen/medium_spacing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_cv">

...
